# A_maz_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_parser.py  maze.txt  maze_data.txt  maze_generator.py  mymaze.txt  pyproject.toml  renderer.py
mazegen/: __init__.py  maze_generator.py
