[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
authors = [
  { name = "okhouya" },
  { name = "aghoudan" },
]
description = "Reusable maze generation library (A-Maze-ing project)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "mypy"]

[tool.setuptools]
py-modules = ["maze_generator", "config_parser", "renderer", "a_maze_ing"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true