[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generation library (A-Maze-ing project)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest", "flake8", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "dist", "build"]